--- a/iservices/css/design.css
+++ b/iservices/css/design.css
@@ -71,3 +71,8 @@ footer { background-color:#0c1a1e; min-height:350px; font-family: 'Open Sans', s
  .bottom_ul li:after { content:"/"; color:#FFF; margin-right:8px; margin-left:8px;}
  .bottom_ul li a { color:#FFF;  font-size:12px;}
 
+
+ table thead tr th {
+    font-family: tahoma;
+    font-size: 12px;
+}
