--- a/iservices/css/style.css
+++ b/iservices/css/style.css
@@ -49,8 +49,8 @@ a.none:hover {text-decoration: none;}
 @media screen and (max-width: 992px) {.navbar-toggle {display: block;}.navbar-collapse.collapse {display: none !important;}.main-navbar-nav.navbar-nav,.main-navbar-nav.navbar-nav > li {float: none !important;}.navbar-collapse.collapse.in {display: block !important;overflow-y: auto !important;}}
 
 /* Hero */
-.hero_area {background-image: url(img/hero.jpg);background-position: center center;background-repeat: no-repeat;background-size: cover;height: 475px;padding: 0;}
-.hero_content {padding: 120px 0;}
+.hero_area {background-image: url(../img/hero.png);background-position: center center;background-repeat: no-repeat;background-size: cover;max-width: 792px;max-height: 475px;padding: 0;}
+.hero_content {padding: 475px 0;}
 .hero_content h1 {text-shadow: 1px 1px 2px rgba(0,0,0,0.75);color: #005FA6;font-weight: 700;font-size: 42px;}
 .hero_content h2 {text-shadow: 1px 1px 2px rgba(0,0,0,0.25);color: #000;font-weight: 700;font-size: 32px;margin-top: 0;width: 45%;line-height: 38px;}
 
@@ -98,7 +98,7 @@ h2.section-title {text-align: center;color: #404040;}
 @media (min-width: 992px ) {.carousel-inner .active.left {left: -25%;}.carousel-inner .next {left: 25%;}.carousel-inner .prev {left: -25%;}}
 
 /* Footer */
-footer.site-footer {background: #e6e6e6;padding: 20px 0 0;float: left;width: 100%;}
+footer.site-footer {width: 100%;}
 footer.site-footer h4 {font-size: 17px;font-weight: 500;}
 footer.site-footer ul {padding-left: 0;margin-bottom: 20px;list-style: none;}
 footer.site-footer ul a {color: #666;font-size: 13px;}
@@ -189,4 +189,4 @@ ul.big li:nth-child(2n) {margin-left: 2%;}
 @media (min-width:463px) and (max-width:768px) {
     .fbox {float: left;}
     .fbox:nth-child(3) {float: right !important;}
-    
+
