--- a/iservices/iservices/css/estilo.css
+++ b/iservices/iservices/css/estilo.css
@@ -262,6 +262,14 @@ label {
   font-weight: bold;
 }
 
+#corpo-detalhe-servico-usuario-dois span{
+  font-weight: bold;
+}
+
+#corpo-detalhe-servico-usuario span {
+ font-weight: bold;
+}
+
 #horario-urgencia{
   display: inline;
 }
